# QEasyWidgets

./: .gitignore  MANIFEST.in  README.md  setup.py
QEasyWidgets/: ComponentsCustomizer.py  QFunctions.py  QTasks.py  Sources.py  Utils.py  WindowCustomizer.py  __init__.py
QEasyWidgets/Common/: Icon.py  Language.py  QFunctions.py  QTasks.py  QWorker.py  Signals.py  Status.py  StyleSheet.py  Theme.py  Translator.py  Utils.py  __init__.py
QEasyWidgets/Components/: Bar.py  Browser.py  Button.py  ChatWidget.py  CheckBox.py  ComboBox.py  ComponentsCustomizer.py  DockWidget.py  Edit.py  GroupBox.py  Label.py  List.py  Menu.py  Player.py  ProgressBar.py  ScrollArea.py  Slider.py  SpinBox.py  StatusWidget.py  Tab.py  Table.py  ToolBox.py  Tree.py  Widget.py  __init__.py
QEasyWidgets/QSS/Dark/: Button.qss  ComboBox.qss  Dialog.qss  Edit.qss  SpinBox.qss  Window.qss
QEasyWidgets/QSS/Light/: Bar.qss  Button.qss  ComboBox.qss  Dialog.qss  Edit.qss  Player.qss  SpinBox.qss  ToolBox.qss  Tree.qss  Window.qss
QEasyWidgets/Resources/: Sources.py
QEasyWidgets/Resources/qss/Dark/: Bar.qss  Browser.qss  Button.qss  ChatWidget.qss  ComboBox.qss  Dialog.qss  Edit.qss  GroupBox.qss  Label.qss  List.qss  Menu.qss  Player.qss  ScrollArea.qss  SpinBox.qss  Tab.qss  Table.qss  ToolBox.qss  Tree.qss  Window.qss
QEasyWidgets/Resources/qss/Light/: Bar.qss  Browser.qss  Button.qss  ChatWidget.qss  ComboBox.qss  Dialog.qss  Edit.qss  GroupBox.qss  Label.qss  List.qss  Menu.qss  Player.qss  ScrollArea.qss  SpinBox.qss  Tab.qss  Table.qss  ToolBox.qss  Tree.qss  Window.qss
QEasyWidgets/Windows/: Bar.py  Dialog.py  Menu.py  Window.py  WindowCustomizer.py  __init__.py
QEasyWidgets/Windows/FramelessWindow/: Bar.py  Window_linux.py  Window_win32.py  __init__.py
c++/QEasyWidgets/: CMakeLists.txt  QEasyWidgets.cpp  QEasyWidgets.h  QEasyWidgets.pro  QEasyWidgets_All.h
c++/QEasyWidgets/Common/: Config.cpp  Config.h  Icon.cpp  Icon.h  Language.cpp  Language.h  QFunctions.cpp  QFunctions.h  QTasks.cpp  QTasks.h  QWorker.cpp  QWorker.h  Signals.cpp  Signals.h  StyleSheet.cpp  StyleSheet.h  Theme.cpp  Theme.h  Translator.cpp  Translator.h
c++/QEasyWidgets/Components/: Bar.cpp  Bar.h  Browser.cpp  Browser.h  Button.cpp  Button.h  ChatWidget.cpp  ChatWidget.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  DockWidget.cpp  DockWidget.h  Edit.cpp  Edit.h  Frame.cpp  Frame.h  GroupBox.cpp  GroupBox.h  Label.cpp  Label.h  List.cpp  List.h  Menu.cpp  Menu.h  Player.cpp  Player.h  ProgressBar.cpp  ProgressBar.h  ScrollArea.cpp  ScrollArea.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  SpinBox.cpp  SpinBox.h  StatusWidget.cpp  StatusWidget.h  (+12 more)
c++/QEasyWidgets/Resources/: sources.qrc
c++/QEasyWidgets/Resources/qss/dark/: Browser.qss  ChatWidget.qss  CheckBox.qss  ComboBox.qss  DockWidget.qss  GroupBox.qss  Label.qss  List.qss  Menu.qss  Player.qss  ProgressBar.qss  SpinBox.qss  ToolBox.qss  Tree.qss
c++/QEasyWidgets/Resources/qss/light/: Browser.qss  Button.qss  ChatWidget.qss  CheckBox.qss  ComboBox.qss  Edit.qss  Label.qss  List.qss  Menu.qss  Player.qss  Slider.qss  SpinBox.qss  Tab.qss  Table.qss  ToolBox.qss  ToolTip.qss  Tree.qss
c++/QEasyWidgets/Windows/: Dialog.cpp  Dialog.h  Window.cpp  Window.h
c++/QEasyWidgets/Windows/FramelessWindow/: FramelessWindow.cpp  FramelessWindow.h  framelessWindow.h  framelessWindow_linux.cpp  framelessWindow_win32.cpp
c++/examples/: CMakeLists.txt  build.bat  build.sh
c++/examples/gallery/: CMakeLists.txt  README.md  main.cpp
docs/: README_CN.md
python/: setup.py
python/QEasyWidgets/: __init__.py
python/QEasyWidgets/Common/: Config.py  Icon.py  Language.py  QFunctions.py  QTasks.py  Signals.py  StyleSheet.py  Theme.py  __init__.py
python/QEasyWidgets/Components/: Browser.py  Button.py  DockWidget.py  Edit.py  Frame.py  Label.py  Menu.py  Player.py  ProgressBar.py  ScrollArea.py  Slider.py  SpinBox.py  Tab.py  Table.py  ToolBox.py  ToolTip.py  Tree.py  Widget.py  __init__.py
python/QEasyWidgets/QEasyWidgets/: __init__.py
python/QEasyWidgets/QEasyWidgets/Common/: Icon.py  QFunctions.py  QTasks.py  Signals.py
python/QEasyWidgets/QEasyWidgets/Components/: CheckBox.py  ComboBox.py  DockWidget.py  GroupBox.py  Label.py  List.py  Player.py  Slider.py  Tab.py  Table.py  __init__.py
python/QEasyWidgets/QEasyWidgets/Resources/: Sources.py
python/QEasyWidgets/QEasyWidgets/Resources/qss/Dark/: SpinBox.qss  Table.qss
python/QEasyWidgets/QEasyWidgets/Resources/qss/Light/: Bar.qss  ComboBox.qss  DockWidget.qss  GroupBox.qss  ScrollArea.qss  Tree.qss
python/QEasyWidgets/QEasyWidgets/Windows/FramelessWindow/: Window_win32.py  __init__.py
python/QEasyWidgets/Resources/: sources.py  sources.qrc
python/QEasyWidgets/Resources/qss/Dark/: Bar.qss  Browser.qss  ComboBox.qss  Edit.qss  Tree.qss
python/QEasyWidgets/Resources/qss/Light/: Browser.qss  List.qss  Player.qss  Tab.qss
python/QEasyWidgets/Resources/qss/dark/: Bar.qss  Button.qss  ChatWidget.qss  ComboBox.qss  Edit.qss  GroupBox.qss  List.qss  Menu.qss  Slider.qss  Tab.qss  Table.qss  ToolTip.qss  Tree.qss
python/QEasyWidgets/Resources/qss/light/: Bar.qss  GroupBox.qss  Label.qss  Menu.qss  ProgressBar.qss  SpinBox.qss  Tree.qss
python/QEasyWidgets/Windows/: Dialog.py  __init__.py
python/QEasyWidgets/Windows/FramelessWindow/: Window_linux.py  __init__.py  framelessWindow_linux.py  framelessWindow_win32.py
